done things today

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
+    <p>Here are some food recipes u can try making</p>
+    <a href="recipes/butterchiken.html">Butter Chiken</a>
+    <a href="recipes/mmousse.html">mango mousse</a>
+    <a href="recipes/water.html">waater</a>
 
     
 </body>
