--- a/recipes/water.html
+++ b/recipes/water.html
@@ -7,5 +7,12 @@
 </head>
 <body>
    <h1>Water</h1> 
+   <img src="https://domf5oio6qrcr.cloudfront.net/medialibrary/7909/conversions/b8a1309a-ba53-48c7-bca3-9c36aab2338a-thumb.jpg">
+   <h2>Instructions</h2>
+   <ol>
+        <li>Find 2 hydrogen atoms</li>
+        <li>Find 1 oxygen atom</li>
+        <li>combine the atoms and store in vessel</li>
+   </ol>
 </body>
 </html>
